crates/forge_provider/src/forge_provider/snapshots/forge_provider__forge_provider__request__tests__assistant_message_with_tool_call_conversion.snap
---
source: crates/forge_provider/src/forge_provider/request.rs
expression: router_message
---
{
  "role": "assistant",
  "content": "Using tool",
  "tool_calls": [
    {
      "id": "123",
      "type": "function",
      "function": {
        "name": "test_tool",
        "arguments": "{\"key\":\"value\"}"
      }
    }
  ]
}
