crates/forge_provider/src/forge_provider/snapshots/forge_provider__forge_provider__request__tests__tool_message_conversion.snap
---
source: crates/forge_provider/src/forge_provider/request.rs
expression: router_message
snapshot_kind: text
---
{
  "role": "tool",
  "content": "{\n               \"user\": \"John\",\n               \"age\": 30,\n               \"address\": [{\"city\": \"New York\"}, {\"city\": \"San Francisco\"}]\n            }",
  "name": "test_tool",
  "tool_call_id": "123"
}
