crates/forge_provider/src/forge_provider/snapshots/forge_provider__forge_provider__request__tests__tool_message_typescript_code.snap
---
source: crates/forge_provider/src/forge_provider/request.rs
expression: router_message
---
{
  "role": "tool",
  "content": "<forge_tool_result><forge_tool_name>rust_tool</forge_tool_name><success><![CDATA[{ \"code\": \"fn main<T>(gt: T) {let b = &gt; }\"}]]></success></forge_tool_result>",
  "name": "rust_tool",
  "tool_call_id": "456"
}
